# v5-memo

./: .gitignore  DEPRECATED.md  README.md  V5_HANDOVER_2026-07-10.md  pyproject.toml
.serena/: project.yml
deploy/: install-v5-portfolio-isolation.sh  researka-fullraw-shard-cache-mount.service  v5-memo-fullraw-fts-root-mount.service  v5-memo-fullraw-index-build.service  v5-memo-fullraw-index-strict-5tb.conf  v5-memo-fullraw-index.service  v5-memo-fullraw-service-overrides.env  v5-memo-fullraw-shard-cache-mount.service  v5-memo-fullraw-shards.env.example  v5-memo-isolated-fullraw-fts-mount.service  v5-memo-isolated-fullraw-search.service  v5-memo-isolated-fullraw.env.example  v5-memo-portfolio-catchup.service  v5-memo-portfolio-catchup.timer  v5-memo-portfolio-prepare.service  v5-memo-portfolio-prepare.timer  v5-memo-portfolio-publish.service  v5-memo-portfolio-publish.timer  v5-memo-portfolio-shared-fullraw.env  v5-memo-publish-fullraw-fts-mount.service  v5-memo-publish-fullraw-owned.conf  v5-memo-publish-fullraw-search-owned.conf  v5-memo-publish-fullraw-search.service  v5-memo-publish-fullraw-shared.conf  v5-memo-publish-fullraw.env  v5-portfolio-publish-fullraw.conf  v5-portfolio-shared-fullraw.conf  zzz-v5-portfolio-isolated-fullraw.conf
docs/: index.html  latest.md  ~$latest.md
scripts/: fullraw_exhaustive_sweep_once.py  v5_publish_portfolio.py
tests/: test_cli.py  test_client.py  test_coverage.py  test_eval.py  test_fullraw_index.py  test_fullraw_service.py  test_minimax_writer.py  test_publication_quality.py  test_publish_portfolio.py  test_quality_semantics.py  (+2 more)
(+46 files in other folders)
