[project]
name = "v5-memo"
version = "0.1.0"
description = "Independent alpha memo writer that mines corpus-scale search hits for receipt-bound insights."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "ruff==0.15.12",
    "mypy==2.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
